--- a/server/fivem-resource/ui/index.html
+++ b/server/fivem-resource/ui/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>CAD Bridge 000</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="cad_radio.css" />
   </head>
   <body>
     <div id="overlay" class="overlay hidden" aria-hidden="true">
@@ -68,6 +70,9 @@
       </section>
     </div>
 
+    <div id="app"></div>
+
+    <script type="module" src="cad_radio.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
