--- a/server/fivem-resource/ui/index.html
+++ b/server/fivem-resource/ui/index.html
@@ -81,6 +81,13 @@
         <p class="subtitle">
           Record is stored in CAD with status controls: valid, suspended, disqualified, and expired.
         </p>
+        <div class="portal-brand">
+          <img class="portal-logo" src="vicroads-logo.jpg" alt="VicRoads" />
+          <div class="portal-brand-text">
+            <span class="portal-brand-title">VicRoads Portal</span>
+            <span class="portal-brand-subtitle">State of Victoria</span>
+          </div>
+        </div>
 
         <form id="licenseForm" class="form" novalidate>
           <div class="field">
@@ -136,6 +143,13 @@
         <p class="subtitle">
           Pulls vehicle details from your current driver seat. Expiry is automatically calculated from today based on the selected registration length.
         </p>
+        <div class="portal-brand">
+          <img class="portal-logo" src="vicroads-logo.jpg" alt="VicRoads" />
+          <div class="portal-brand-text">
+            <span class="portal-brand-title">VicRoads Rego Portal</span>
+            <span class="portal-brand-subtitle">State of Victoria</span>
+          </div>
+        </div>
 
         <form id="registrationForm" class="form" novalidate>
           <div class="inline-grid two-col">
@@ -178,7 +192,13 @@
     <div id="idCardOverlay" class="id-card-overlay hidden" aria-hidden="true">
       <section class="id-card" role="dialog" aria-modal="false" aria-labelledby="idCardTitle">
         <header class="id-card-header">
-          <div class="id-card-eyebrow">VicRoads Photo Licence</div>
+          <div class="id-card-brand">
+            <img class="id-card-logo" src="vicroads-logo.jpg" alt="VicRoads" />
+            <div>
+              <div class="id-card-eyebrow">VicRoads Photo Licence</div>
+              <div class="id-card-brand-subtitle">Victorian Registration Authority</div>
+            </div>
+          </div>
           <button id="idCardCloseBtn" class="icon-btn" type="button" aria-label="Close">x</button>
         </header>
 
@@ -200,7 +220,7 @@
           </div>
         </div>
 
-        <div class="id-card-footer">Press <strong>PGDN</strong> to close</div>
+        <div class="id-card-footer">Press <strong>PGDN</strong> to show or hide</div>
       </section>
     </div>
 
