More voice additions

--- a/server/fivem-resource/ui/index.html
+++ b/server/fivem-resource/ui/index.html
@@ -228,5 +228,6 @@
 
     <script type="module" src="cad_radio.js"></script>
     <script src="app.js"></script>
+    <script src="external_voice_bridge.js"></script>
   </body>
 </html>
