--- a/server/fivem-resource/ui/index.html
+++ b/server/fivem-resource/ui/index.html
@@ -224,6 +224,8 @@
       </section>
     </div>
 
+    <div id="mugshotBackdrop" style="display:none;position:fixed;top:0;left:0;width:100vw;height:100vh;background:#fff;z-index:0;"></div>
+
     <div id="app"></div>
 
     <script type="module" src="cad_radio.js"></script>
