Added retake photo option and more live map fixes

--- a/server/fivem-resource/ui/index.html
+++ b/server/fivem-resource/ui/index.html
@@ -98,7 +98,7 @@
             <label>Licence Status</label>
             <p id="licenseStatusMessage" class="subtitle"></p>
             <div class="actions">
-              <button id="licenseRetakePhotoBtn" class="btn btn-secondary" type="button">Retake Photo</button>
+              <button id="licenseRetakePhotoBtn" class="btn btn-ghost" type="button">Retake Photo</button>
             </div>
           </div>
 
