--- a/web/public/live-map-interface/index.html
+++ b/web/public/live-map-interface/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Havoc's LiveMap</title>
+    <base href="/live-map-interface/">
 
     <!-- Pin favicon from: https://www.freefavicon.com/freefavicons/objects/iconinfo/map-pin-152-195874.html -->
     <link
