--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quokka Networks CAD</title>
-    <link rel="icon" type="image/png" href="/96.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="%BASE_URL%96.png?v=20260222" />
+    <link rel="shortcut icon" type="image/png" href="%BASE_URL%96.png?v=20260222" />
+    <link rel="apple-touch-icon" sizes="96x96" href="%BASE_URL%96.png?v=20260222" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" />
