--- a/server/fivem-resource/ui/license-card.html
+++ b/server/fivem-resource/ui/license-card.html
@@ -14,8 +14,8 @@
       <div class="id-card-main">
         <div class="id-card-top">
           <div class="id-card-name-block">
-            <span class="id-card-top-label">First Name</span>
-            <span id="idCardFirstName" class="id-card-name" data-license-field="first_name"></span>
+            <span class="id-card-top-label">Name</span>
+            <span id="idCardFullName" class="id-card-name" data-license-field="full_name"></span>
           </div>
           <div class="id-card-licence-block">
             <span class="id-card-top-label">Licence No.</span>
