Changed vicroads logo

--- a/server/fivem-resource/ui/index.html
+++ b/server/fivem-resource/ui/index.html
@@ -82,7 +82,7 @@
           Complete this quick Australian road rules quiz. Score at least 80% to receive your licence.
         </p>
         <div class="portal-brand">
-          <img class="portal-logo" src="vicroads-logo.jpg" alt="VicRoads" />
+          <img class="portal-logo" src="vicroads-logo.png" alt="VicRoads" />
           <div class="portal-brand-text">
             <span class="portal-brand-title">VicRoads Portal</span>
             <span class="portal-brand-subtitle">State of Victoria</span>
@@ -137,7 +137,7 @@
           Pulls vehicle details from your current driver seat. Expiry is automatically calculated from today based on the selected registration length.
         </p>
         <div class="portal-brand">
-          <img class="portal-logo" src="vicroads-logo.jpg" alt="VicRoads" />
+          <img class="portal-logo" src="vicroads-logo.png" alt="VicRoads" />
           <div class="portal-brand-text">
             <span class="portal-brand-title">VicRoads Rego Portal</span>
             <span class="portal-brand-subtitle">State of Victoria</span>
