--- a/server/fivem-resource/ui/license-card.html
+++ b/server/fivem-resource/ui/license-card.html
@@ -50,7 +50,7 @@
 
       <div class="id-card-photo-panel">
         <img id="idCardPhoto" class="id-card-photo" alt="Licence photo" data-license-image="mugshot_url" />
-        <img class="id-card-vicroads-logo" src="vicroads-logo.jpg" alt="VicRoads" />
+        <img class="id-card-vicroads-logo" src="vicroads-logo.png" alt="VicRoads" />
       </div>
     </div>
 
